--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -117,7 +117,7 @@ p {
 .section-title .text {
   font-size: 16px;
   line-height: 24px;
-  color: #6c6c6c;
+  color: #121212;
   margin-top: 24px; }
 
 /*===== All Preloader Style =====*/
@@ -1303,13 +1303,13 @@ p {
 .about-area {
   position: relative;
   background-color: #f4f6f7;
-  padding-top: 100px;
-  padding-bottom: 100px; }
+  padding-top: 36px;
+  padding-bottom: 36px; }
   .about-area .section-title .title {
     font-size: 44px;
     font-weight: 600;
     line-height: 55px;
-    color: #121212; }
+    color: #000000; }
     @media (max-width: 767px) {
       .about-area .section-title .title {
         font-size: 22px;
@@ -1346,7 +1346,7 @@ p {
     font-size: 20px;
     font-weight: 600;
     line-height: 25px;
-    color: #121212; }
+    color: #000000; }
   .single-about .about-content .text {
     font-size: 16px;
     color: #121212;
@@ -2079,8 +2079,8 @@ p {
       20.CONTACT css 
 ===========================*/
 .contact-area {
-  padding-top: 95px;
-  padding-bottom: 100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   background-color: #f4f6f7; }
 
 .form-message.error, .form-message.success {
@@ -2132,11 +2132,11 @@ p {
   font-size: 16px;
   line-height: 24px;
   margin-top: 16px;
-  color: #6c6c6c; }
+  color: #121212; }
 .contact-two .contact-info {
   margin-top: 40px; }
   .contact-two .contact-info li {
-    color: #6c6c6c;
+    color: #121212;
     margin-top: 8px;
     font-size: 16px; }
     .contact-two .contact-info li i {
